# openclaw-observational-memory

./: .gitignore  API.md  API_CN.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_CN.md  CONCURRENT.md  CONTRIBUTING_CN.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT_SUMMARY.md  DIAGNOSIS.md  FINAL_REPORT.md  ISSUES.md  MEMORY_IMPORT.md  OPENCLAW_INTEGRATION.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_WINS.md  README.md  README_CN.md  README_THREADING.md  ROADMAP.md  ROADMAP_CN.md  SYNC_REPORT.md  TOKEN_FIX_REPORT.md  USAGE.md  UX_OPTIMIZATION.md  VECTOR_SEARCH.md  VERIFICATION_REPORT.md  WEB_UI.md  app.py  app_backup.py  check_database.ps1  check_database_detailed.ps1  check_db_after_sync.py  check_db_encoding.py  check_empty.py  check_github_actions.ps1  check_message_content.py  (+40 more)
.github/workflows/: build.yml  release.yml
api/: main.py
examples/: quick_start.py
frontend/: index.html  next.config.ts  package-lock.json  package.json  vite.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/ai-search/: page.tsx
frontend/app/analytics/: page.tsx
frontend/app/knowledge-graph/: page.tsx
frontend/app/memory/: page.tsx
frontend/app/monitoring/: page.tsx
frontend/app/search/: page.tsx
frontend/app/sessions/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/tools/: page.tsx
frontend/app/welcome/: page.tsx
frontend/components/: HelpButton.tsx  Navigation.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/lib/: api.ts
frontend/src/: App.tsx  main.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  Memory.tsx  Search.tsx  (+3 more)
frontend/types/: index.ts
hook/: HOOK.md  README.md  handler.js  package-lock.json  package.json
hooks/: observational_memory.py
integrations/: config.json  openclaw_hook.py
locales/: en.json  zh.json
plugins/: url_extractor.py
src/: lib.rs  main.rs  monitoring.rs
src/api/: mod.rs  search.rs
src/core/: ai_search.rs  backup.rs  export.rs  knowledge_graph.rs  memory.rs  mod.rs  observer.rs  summary.rs  tools.rs  vector.rs
src/db/: mod.rs  models.rs  queries.rs
src/memory/: consolidation.rs  deduplication.rs  mod.rs  patterns.rs  relevance.rs
src/observational_memory/: __init__.py  cli.py  concurrent.py  data_manager.py  memory_optimizer.py  tool_suggestion.py  vector.py
src/web/: __init__.py  app.py  memory_optimization_page.py  settings_page.py  tool_suggestions_page.py
tests/: integration_test.rs  test_concurrent.py  test_core.py  test_data_manager.py  test_extensions.py  test_memory_optimizer.py  test_tool_suggestion.py  test_vector.py
tools/: README.md  full_sync.py  retry_failed.py  session_poller.py  start_poller.ps1  test_parser.py  test_poller_paths.py  test_poller_sync.py  verify_poller_config.py
(+1 files in other folders)
