[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "observational-memory"
version = "2.0.0"
description = "Mastra-inspired memory system for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OpenClaw Community"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    
    
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sentence-transformers>=5.0.0",
    "torch>=1.11.0",
    "numpy>=1.20.0",
    "streamlit>=1.54.0",
    "plotly>=6.5.0",
    "streamlit-option-menu>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
api = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
]

[project.scripts]
observational-memory = "observational_memory.cli:main"

[project.urls]
Homepage = "https://github.com/kiss-kedaya/openclaw-observational-memory"
Documentation = "https://github.com/kiss-kedaya/openclaw-observational-memory"
Repository = "https://github.com/kiss-kedaya/openclaw-observational-memory"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
